# cli

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.toml.example  development-README.md  dist-workspace.toml
.claude/: settings.json  settings.local.json
.github/: build-setup.yml
.github/workflows/: auto-tag.yml  claude-code-review.yml  dev-app-release.yml  publish.yml  release.yml
config/: dev.toml  prod.toml  staging.toml
dev-app/: README.md  electron-builder.json5  package-lock.json  package.json  tsconfig.json
dev-app/scripts/: patch-electron-name.mjs
dev-app/src/: cert.ts  main.ts  server.ts
src/: achievements.rs  api_client.rs  auth.rs  browser.rs  builds.rs  clear_playtest_data.rs  config.rs  config_cmd.rs  file_staging.rs  init.rs  main.rs  publish.rs  rclone.rs  stats.rs  updater.rs  uploader.rs  util.rs  version_cmd.rs  welcome.rs
src/dev/: browser.rs  cert.rs  dev.js  dev_app.rs  engine_shell.html  entrypoint.rs  interceptor.rs  launcher.rs  mod.rs  sandbox.rs  server.rs  shell.html  synth_shell.html  url_params.rs
