[package]
name = "wvdsh"
version = "0.1.48"
edition = "2021"
authors = ["Wavedash Team"]
description = "Cross-platform CLI tool for uploading game projects to wavedash.com"
license = "MIT"
repository = "https://github.com/wvdsh/cli"
homepage = "https://wavedash.com"
readme = "README.md"
keywords = ["cli", "gaming", "upload", "wavedash"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "wvdsh"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP & Servers
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls-webpki-roots-no-provider", "http2"] }
axum = { version = "0.7" }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "ring"] }
dialoguer = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"

# Progress & UI
indicatif = "0.17"

# Cross-platform paths
directories = "5.0"

# Object storage uploads
opendal = { version = "0.49", features = ["services-s3"] }

# File operations
walkdir = "2.5"
mime_guess = "2.0"

# Authentication
tiny_http = "0.12"
open = "5.0"
url = "2.5"
urlencoding = "2.1"

# Update checking
axoupdater = "0.9"
semver = "1.0"
chrono = "0.4"





[build-dependencies]
dotenvy = "0.15"

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
